# Strata

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  ROADMAP.md  package-lock.json  package.json
apps/api/: .dockerignore  Dockerfile  pyproject.toml  railway.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 08a82295cd35_add_listing_media.py  4ccbc432865c_add_listing_tables.py  f2d5d335a5ca_initial_schema.py
apps/api/data/neighborhoods/: quartiere.geojson
apps/api/data/recon/: FIELD_NOTES.md  demographics_sample.csv  kanton_eingaenge_sample.csv  kanton_gebaeude_sample.csv  kanton_wohnungen_sample.csv  noise_notes.txt  quartier_boundaries.json  stadt_eingaenge.json  stadt_gebaeude.json  stadt_wohnungen.json
apps/api/data/samples/: RECON_NOTES.md  flatfox_search.json  homegate_api.json  homegate_search.html  homegate_search.json
apps/api/src/strata_api/: config.py  main.py
apps/api/src/strata_api/db/: __init__.py  base.py  session.py
apps/api/src/strata_api/pipeline/: __init__.py  __main__.py  address_matcher.py  dedup.py  downloader.py  loader.py  (+7 more)
apps/api/tests/: conftest.py  test_health.py
apps/api/tests/db/: test_base.py  test_listing_models.py  test_models.py
apps/api/tests/pipeline/: test_address_matcher.py  test_dedup.py  test_export_geojson.py  test_export_listings_geojson.py  test_kanton_parser.py  test_listing_loader.py  test_listing_runner.py  test_loader.py  test_media_downloader.py  test_runner.py  test_schemas.py  test_stadt_parser.py  test_transform.py
apps/api/tests/routers/: test_admin_pipeline.py  test_building_summary.py  test_listings.py  test_neighborhoods.py  test_registry.py
(+105 files in other folders)
